src/objects/MICO_Sprint__c.object
<CustomObject>
    <description>Business Description: This object is used to hold details about the sprints or iterations. It includes information about start and end dates, as well as overall capacity.

Used In: Mission Control App</description>
    <fields>
        <fullName>Burndown__c</fullName>
        <description>Keris old formula
Story_Points__c -((((Today()- Start_Date__c )+1)-(round(((Today()- Start_Date__c )+1)/7,0)*2))*( Story_Points__c /(( Number_of_days_in_sprint__c -((Number_of_days_in_sprint__c /7)*2))-1))-( Story_Points__c /(( Number_of_days_in_sprint__c -((Number_of_days_in_sprint__c /7)*2))-1)))

---

SM: Formula includes -1 as it should essentially show yesterdays expected burdown to coincide with the snampshot at 8AM for the previous day</description>
        <formula>min(Story_Points__c - (( Working_Days_Through_Sprint__c - 1) / Number_Working_Days_in_Sprint__c * Story_Points__c ),Story_Points__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Where we should be within the sprint on current selected date</inlineHelpText>
        <label>Burndown</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Completed_story_points__c</fullName>
        <description>Completed story points at the end of the sprint</description>
        <inlineHelpText>Manually populate this field at the end of the sprint to calculate your velocity for this sprint</inlineHelpText>
        <label>Completed story points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dev_Man_Days__c</fullName>
        <formula>Number_of_full_time_devs_in_sprint__c  *  Total_Working_Days_in_Sprint__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dev Man Days</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_Working_Days_in_Sprint__c</fullName>
        <description>Populated by workflow. Not displayed on page layout.</description>
        <inlineHelpText>The number of working days in this sprint</inlineHelpText>
        <label>Number Working Days in Sprint</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_days_in_sprint__c</fullName>
        <label>Number of days in sprint</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_full_time_devs_in_sprint__c</fullName>
        <description>Number of full time developer heads throughout the sprint</description>
        <label>Number of full time devs in sprint</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <inlineHelpText>What are the main central purposed of this sprint?</inlineHelpText>
        <label>Objective</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>MICO_Project__c</referenceTo>
        <relationshipLabel>Sprints</relationshipLabel>
        <relationshipName>MICO_Sprints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remaining_Sprint_Days__c</fullName>
        <formula>Number_Working_Days_in_Sprint__c -  

(CASE(MOD( Start_Date__c  - DATE(1985,6,24),7), 
  0 , CASE( MOD( Today() - Start_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( Today() - Start_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( Today() - Start_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD(Today() - Start_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( Today() - Start_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( Today() - Start_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( Today() - Start_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( Today() - Start_Date__c )/7)*5) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Sprint Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Sprints must be &quot;In Planning&quot; for the sprint planning tool to work
They must be &quot;In Progress&quot; for the burndown to work</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Story_Points__c</fullName>
        <label>Story Points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tech1_Story_Points__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total SFDC Capacity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tech2_Story_Points__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Other Capacity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Working_Days_in_Sprint__c</fullName>
        <formula>Number_Working_Days_in_Sprint__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of working days (Monday-Friday) in this sprint.

NB: This does not take in to account public holidays.</inlineHelpText>
        <label>Total Working Days in Sprint</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Velocity__c</fullName>
        <formula>if(Dev_Man_Days__c &gt;0, Completed_story_points__c /  Dev_Man_Days__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If Dev Man Days and Story Points Completed ispopulated, shows the velocity achieved at the end of the sprint in Points Per Dev Day. This can be used when calculating your capacity for the next sprint</inlineHelpText>
        <label>Velocity</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Working_Days_Through_Sprint__c</fullName>
        <formula>if( Start_Date__c &gt; today(),0,


IF(AND((5 - (CASE(MOD( Start_Date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)) &lt; (CASE(MOD( TODAY() - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0)) ), 
((( TODAY() - Start_Date__c ) + 1) &lt; 7)), 
((CASE(MOD(TODAY() - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0)) - (5 - (CASE(MOD( Start_Date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)))), 
(((FLOOR((( TODAY() - Start_Date__c ) - (CASE(MOD( Start_Date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 6, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0))) / 7)) * 5) + 
(CASE(MOD( Start_Date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)) + 
(CASE(MOD( TODAY() - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of working days in to the sprint we are today</inlineHelpText>
        <label>Working Days Through Sprint</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sprint</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>Number_of_days_in_sprint__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sprint Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sprints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>